# vexilla

./: .gitignore  BUILD  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MODULE.bazel  Module.bzl  Package.swift  README.md  WORKSPACE  bun.lockb  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.json
.circleci/: config.yml
.github/PULL_REQUEST_TEMPLATE/: general.md  sdk.md
.github/workflows/: deploy.yml  new-workflow.yml  pr.yml  test.yml
apps/app/: .env  .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/app/src/: App.css  App.tsx  index.css  main.tsx  types.tsx
apps/docs/: .gitignore  ATTRIBUTIONS  astro.config.mjs  components.json  markdoc.config.mjs  next.config.js  package.json  pagefind.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  twin.d.ts  webpack.config.js
apps/docs/components/: GlobalStyles.tsx  documentation-layout.tsx  footer.tsx  header.tsx  link.tsx
apps/docs/pages/: _app.tsx  _document.tsx  index.tsx
apps/docs/scripts/: trace-images.js
apps/docs/styles/: index.css  prism-coy.css  prism.css
apps/forms/: .env.example  package.json  svelte.config.js  vite.config.ts
apps/forms/scripts/: env.cjs
apps/git-auth/: package.json
apps/web/: README.md  package.json  tsconfig.json  vue.config.js
apps/web-old/: package.json  postcss.config.js  tailwind.config.js
apps/web-old/src/: vuex-shim.d.ts
apps/web/scripts/: mock-gh-pages.js
apps/web/src/: App.vue  main.ts  shims-vue.d.ts
clients/client-cocoa/: LICENSE  README.md  README.toml  VexillaClient.podspec
clients/client-csharp/: Package.nuspec  README.md  README.toml
clients/client-csharp/Vexilla.Client/: Client.cs  EnvironmentJsonConverter.cs  Group.cs  Hasher.cs  Types.cs  Vexilla.Client.csproj  packages.config
clients/client-csharp/Vexilla.Client.Tests/: ClientTest.cs  HasherTest.cs  UnitTest1.cs  Vexilla.Client.Tests.csproj
clients/client-dart/: CHANGELOG.md  LICENSE  README.md  README.toml  pubspec.yaml
clients/client-dart/example/: vexilla_client_example.dart
clients/client-dart/lib/: vexilla_client.dart
clients/client-dart/test/: vexilla_client_test.dart
clients/client-elixir/: README.md  README.toml  mix.exs
clients/client-elixir/lib/: vexilla_client.ex  vexilla_client_httpoison.ex
clients/client-elixir/test/: vexilla_client_test.exs
clients/client-go/: README.md  README.toml
clients/client-go/pkg/: client.go  client_test.go  hashing.go  hashing_test.go  scheduling.go  types.go
clients/client-js/: README.md  README.toml  package-lock.json  package.json  tsconfig.json
clients/client-js/src/: client.ts  generate_seed_for_uuid.ts  hasher.ts  scheduling.ts  test_client.ts
clients/client-kotlin/: .gitignore  README.md  README.toml  build.gradle.kts  gradle.properties  settings.gradle.kts
clients/client-lua/: README.md  README.toml  vexilla_client-0.0.1-1.rockspec
clients/client-lua/spec/: client_spec.lua
clients/client-lua/vexilla/: client.lua
clients/client-php/: composer.json
clients/client-php/src/: Client.php  Hasher.php
clients/client-php/tests/: ClientTest.php  HasherTest.php
clients/client-python/: Dockerfile  Pipfile  README.md
clients/client-python/tests/: test_client.py  test_hasher.py  test_scheduler.py
clients/client-python/vexilla_client/: __init__.py  client.py  exceptions.py  hasher.py  scheduler.py  types.py
clients/client-rust/: BUILD  Cargo.toml  README.md  README.toml
clients/client-rust/src/: hashing.rs  lib.rs  scheduling.rs  types.rs
clients/csharp/: BUILD  Package.nuspec  README.md  README.toml  client-csharp.sln  client-csharp.sln.DotSettings  nuget.config  paket.dependencies
clients/csharp/Vexilla.Client/: Client.cs  EnvironmentJsonConverter.cs  Exception.cs  Hasher.cs  Scheduler.cs  Vexilla.Client.csproj  paket.references
clients/csharp/Vexilla.Client.Tests/: ClientTest.cs  HasherTest.cs  SchedulerTest.cs  Vexilla.Client.Tests.csproj  paket.references
clients/elixir/: .gitignore  Dockerfile  README.md  README.toml  docker-compose.ci.yml  mix.exs
clients/elixir/test/: client_test.exs  hasher_test.exs  scheduler_test.exs  types_test.exs
clients/go/: LICENSE  README.md  README.toml  go.mod  go.work
clients/go/pkg/: BUILD.bazel  client.go  client_test.go  scheduling.go  scheduling_test.go  types.go
clients/go/pkg/internal/: BUILD.bazel  exceptions.go  exceptions_test.go  go.mod  hashing.go  hashing_test.go  json.go  scheduling.go  scheduling_test.go  types.go
clients/go/pkg/vexilla/: BUILD.bazel  client.go  client_test.go
clients/js/: .gitignore  README.md  README.toml  package.json  tsconfig.json
clients/js/scripts/: generate_gradual_uuid.ts  generate_seed_for_uuid.ts  hack-dist-types.ts
clients/js/src/: client.ts  generate_gradual_uuid.ts  generate_seed_for_uuid.ts  hasher.ts  index.ts  scheduling.ts  test_client.ts  test_distribution.ts  test_gradual.ts  test_scheduling.ts
clients/kotlin/: BUILD  README.md  README.toml  build.gradle.kts  settings.gradle.kts
clients/ocaml/: README.md  README.toml  dune-project  vexilla_ocaml_sdk.opam  vexilla_sdk.opam  vexilla_sdk.opam.locked
clients/ocaml/lib/: client.ml  date_time.ml  dune  error.ml  example.json  fetch.ml  flags.ml  hash.ml  lookup.ml  lookup.mli  manifest.ml  schedule.ml  types.ml  utils.ml  utils.mli  vexilla.ml
clients/ocaml/test/: client.ml  dune  hash.ml  schedule.ml
clients/php/: .gitignore  BUILD  Dockerfile  README.md  README.toml  composer.json  docker-compose.ci.yml  docker-compose.yml
clients/php/src/: Client.php  Hasher.php  Scheduler.php
clients/php/tests/: ClientTest.php  HasherTest.php  SchedulerTest.php
clients/python/: .coverage  Pipfile  README.md  README.toml
clients/python/tests/: enums.py  test_client.py  test_hasher.py  test_scheduler.py
clients/rust/: BUILD  Cargo.toml  README.md  README.toml
clients/rust/crates/: BUILD.bazel  (+162 more)
clients/swift/: BROKEN_BUILD  BUILD  Dockerfile  Package.swift  README.md  README.toml  VexillaClient.podspec
scripts/: README.mustache  build-client-readmes.ts
(+345 files in other folders)
