(lang dune 3.10)

(name vexilla_sdk)

(generate_opam_files true)

(source
 (github vexilla/vexilla))

(authors "Dillon Mulroy" "Chris Griffing")

(maintainers "Dillon Mulroy" "Chris Griffing")

(license BUSL-1.1)

(documentation https://github.com/vexilla/vexilla/clients/ocaml)

(package
 (name vexilla_sdk)
 (synopsis "Vexilla SDK")
 (description "Vexilla SDK")
 (depends
  cohttp-lwt-unix
  dune
  fmt
  lwt_ssl
  (ocaml (>= 4.14.1))
  ppx_deriving
  ppx_deriving_yojson
  ptime
  uri
  yojson
  (alcotest :with-test)
  (alcotest_lwt :with-test)
  stdint)
 (tags (feature-flags)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
