load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = [
        "client.go",
        "hashing.go",
        "scheduling.go",
        "types.go",
    ],
    importpath = "github.com/vexilla/client-go/pkg",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pkg_test",
    srcs = [
        "client_test.go",
        "hashing_test.go",
        "scheduling_test.go",
    ],
    embed = [":pkg"],
)
