load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal",
    srcs = [
        "hashing.go",
        "json.go",
        "scheduling.go",
        "types.go",
        "exceptions.go",
    ],
    importpath = "github.com/vexilla/vexilla/clients/go/pkg/internal",
    visibility = ["//clients/go/pkg:__subpackages__"],
)

go_test(
    name = "internal_test",
    srcs = [
        "hashing_test.go",
        "scheduling_test.go",
        "exceptions_test.go",
    ],
    embed = [":internal"],
)
